<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_devStatus"
                android:textAppearance="@android:style/TextAppearance.Material.Display2" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_devStatus_CSVFile"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <ImageView
                    android:id="@+id/CSVWarning"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:adjustViewBounds="false"
                    android:contentDescription="Warning"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_warning_black_48dp" />

                <TextView
                    android:id="@+id/CSVStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#ff0000"
                    android:text="@string/noData"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView77"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_devStatus_Sensors"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <ImageView
                    android:id="@+id/sensorsWarning"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:adjustViewBounds="false"
                    android:contentDescription="Warning"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_warning_black_48dp" />

                <TextView
                    android:id="@+id/sensorStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#ff0000"
                    android:text="@string/noData"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_devStatus_Time"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <ImageView
                    android:id="@+id/timeWarning"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:adjustViewBounds="false"
                    android:contentDescription="Warning"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_warning_black_48dp" />

                <TextView
                    android:id="@+id/timeStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#ff0000"
                    android:text="@string/noData"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </TableRow>
            <TextView
                android:id="@+id/textView716"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                android:text="Set start time (optional)" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Hour:"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/startTimeHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Minute:"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/startTimeMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:id="@+id/textView717"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Second:"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/startTimeSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:id="@+id/textview321"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Milisecond:"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/startTimeMilisecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />

            </TableRow>

            <Button
                android:id="@+id/setStartTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="setStartTime"
                android:text="Set start time" />
            <Button
                android:id="@+id/home_CapturingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="homeCapturingButton"
                android:text="@string/main_capturingButton_GoToCapturing" />
        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000" />




</LinearLayout>